# drawio-bom

./: README.md  drawio_bom.py  pyproject.toml
examples/: example_1.drawio  example_2.drawio
